Fix main image stretching.

--- a/css/main.css
+++ b/css/main.css
@@ -210,6 +210,7 @@
 
 .about .profile__pic {
   width: 320px;
+  height: 400px;
   margin: 2rem 1rem 0 1rem;
   border: 1px solid #FFF;
 }
